--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -14,48 +14,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="206dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintGuide_end="-25dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageview"
         android:layout_width="404dp"
-        android:layout_height="66dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56"
         app:srcCompat="@drawable/heart" />
 
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="154dp"
-        android:layout_height="43dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="516dp"
+        android:layout_marginStart="113dp"
+        android:layout_marginEnd="113dp"
+        android:layout_marginBottom="20dp"
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="35sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/username"
+        app:layout_constraintEnd_toEndOf="@+id/spinner"
+        app:layout_constraintStart_toStartOf="@+id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/imageview"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="368dp"
-        android:layout_height="66dp"
+        android:layout_width="365dp"
+        android:layout_height="0dp"
         android:layout_below="@id/textView7"
-        android:layout_margin="18dp"
-        android:layout_marginTop="16dp"
-        android:background="#45ffffff"
 
+        android:layout_marginBottom="22dp"
+        android:background="#45ffffff"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="20dp"
         android:hint="Password"
@@ -63,38 +61,17 @@
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/repassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
-        android:id="@+id/repassword"
-        android:layout_width="371dp"
-        android:layout_height="66dp"
-        android:layout_below="@id/textView7"
-        android:layout_margin="18dp"
-        android:layout_marginTop="16dp"
-        android:background="#45ffffff"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-
-        android:drawablePadding="20dp"
-        android:hint="Re-Password"
-        android:inputType="textPassword"
-        android:padding="20dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <EditText
         android:id="@+id/username"
-        android:layout_width="367dp"
-        android:layout_height="63dp"
+        android:layout_width="365dp"
+        android:layout_height="0dp"
         android:layout_below="@id/textView7"
-        android:layout_margin="18dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="#45ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="20dp"
@@ -102,19 +79,67 @@
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         tools:ignore="MissingConstraints" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="3dp"
+        app:layout_constraintBottom_toTopOf="@+id/phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView18"
+        app:layout_constraintTop_toTopOf="@+id/textView18"
+        app:layout_constraintVertical_bias="0.0">
+
+    </Spinner>
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="14dp"
+        android:text="Speciality"
+        android:textColor="@color/black"
+        android:textSize="22dp"
+        app:layout_constraintBottom_toTopOf="@+id/phone"
+        app:layout_constraintEnd_toStartOf="@+id/spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/repassword">
+
+    </TextView>
+
+    <EditText
+        android:id="@+id/phone"
+        android:layout_width="365dp"
+        android:layout_height="0dp"
+        android:layout_below="@id/textView7"
+        android:layout_marginBottom="4dp"
+        android:background="#45ffffff"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawablePadding="20dp"
+        android:hint="phone"
+        android:padding="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        tools:ignore="MissingConstraints" />
+
     <EditText
         android:id="@+id/email"
-        android:layout_width="368dp"
-        android:layout_height="66dp"
+        android:layout_width="365dp"
+        android:layout_height="0dp"
         android:layout_below="@id/textView7"
-        android:layout_margin="18dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="22dp"
         android:background="#45ffffff"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="20dp"
@@ -122,39 +147,40 @@
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="361dp"
-        android:layout_height="46dp"
-        android:text="Choose account type :"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+    <Button
+        android:id="@+id/registerbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:background="#6DB7DE "
+        android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repassword"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+        tools:ignore="MissingConstraints" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="390dp"
-        android:layout_height="39dp"
-
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="90dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="31dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/phone"
+        app:layout_constraintTop_toBottomOf="@+id/phone"
+        tools:ignore="MissingConstraints">
 
         <RadioButton
+            android:id="@+id/radiouser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -166,6 +192,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <RadioButton
+            android:id="@+id/radiodoctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
@@ -176,19 +203,26 @@
 
     </RadioGroup>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:background="#6DB7DE "
-        android:text="Register"
+    <EditText
+        android:id="@+id/repassword"
+        android:layout_width="365dp"
+        android:layout_height="0dp"
+        android:layout_below="@id/textView7"
+
+        android:layout_marginBottom="23dp"
+        android:background="#45ffffff"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="20dp"
+        android:hint="Re-Password"
+
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/textView18"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
